--- a/src/page/Add Product/new.scss
+++ b/src/page/Add Product/new.scss
@@ -136,7 +136,7 @@ button {
 .flex {
 	display: flex;
 	flex-direction: row wrap;
-	align-items: center;
+	// align-items: center;
 }
 
 .justify-space-between {
@@ -220,7 +220,7 @@ button {
 	font-weight: 600;
 	font-size: 12px;
 	letter-spacing: .5px;
-	padding: 15px 25px;
+	padding: 8px 15px;
 	border-radius: 50px;
 	cursor: pointer;
 	transition: all .5s ease;
